tests/fixtures/valid/hello.ko
module hello {
    meta {
        purpose: "A minimal valid Kōdo program for testing",
        version: "0.1.0",
        author: "test"
    }

    fn main() {
    }
}
