tests/fixtures/invalid/missing_purpose.ko
module missing_purpose {
    meta {
        version: "0.1.0",
        author: "test"
    }

    fn main() {
    }
}
